Set GC flags
- Turn on some GC flags because the backfiller can use up a ton of resources while backfilling without having time to GC